--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <title>老八贪吃蛇</title>
-        <link rel="shortcut icon" href="/img/she.ico">
+        <link rel="shortcut icon" href="/img/she.ico" type="image/x-icon" />
         <style>
             .map{
                 width: 80%;
